# xdg-py

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: API.md  MIGRATION.md  RECIPES.md
src/codechu_xdg/: __init__.py
tests/: README.md  test_xdg.py
